--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -49,6 +49,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539816891362
   useMarkdown: pweave
   fields:
@@ -89,6 +90,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539816894887
   useMarkdown: pweave
   fields:
@@ -129,6 +131,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539816898413
   useMarkdown: pweave
   fields:
@@ -169,6 +172,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539816901988
   useMarkdown: pweave
   fields:
@@ -209,6 +213,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539817474066
   fields:
     Front: |
@@ -218,6 +223,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539839980555
   fields:
     Front: |
@@ -230,6 +236,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539840114940
   fields:
     Front: |
@@ -242,6 +249,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539840265295
   fields:
     Front: |
@@ -254,6 +262,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539840473352
   fields:
     Front: |
@@ -266,6 +275,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539840473456
   fields:
     Front: |
@@ -278,6 +288,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539840473585
   fields:
     Front: |
@@ -290,6 +301,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873125687
   useMarkdown: pweave
   fields:
@@ -315,6 +327,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873126786
   useMarkdown: pweave
   fields:
@@ -340,6 +353,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873127419
   useMarkdown: pweave
   fields:
@@ -374,6 +388,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873128072
   useMarkdown: pweave
   fields:
@@ -399,6 +414,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873128770
   useMarkdown: pweave
   fields:
@@ -424,6 +440,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873129387
   useMarkdown: pweave
   fields:
@@ -449,6 +466,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873130072
   useMarkdown: pweave
   fields:
@@ -474,6 +492,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539873130736
   useMarkdown: pweave
   fields:
@@ -510,6 +529,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539875389288
   fields:
     Front: |
@@ -527,6 +547,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539875389486
   useMarkdown: pweave
   fields:
@@ -563,6 +584,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539875926512
   fields:
     Front: |
@@ -572,6 +594,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539876023515
   fields:
     Front: |
@@ -581,6 +604,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
 - id: 1539876023615
   fields:
     Front: |
@@ -590,3 +614,4 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+    Annotations: ''
