--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
@@ -18,6 +18,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876471179
   fields:
     Front: |
@@ -27,6 +28,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876982829
   fields:
     Front: |
@@ -36,6 +38,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876982945
   fields:
     Front: |
@@ -45,6 +48,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876983062
   fields:
     Front: |
@@ -54,6 +58,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876983163
   fields:
     Front: |
@@ -63,6 +68,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876983364
   fields:
     Front: |
@@ -72,6 +78,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539876983495
   fields:
     Front: |
@@ -81,6 +88,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539879136133
   useMarkdown: pweave
   fields:
@@ -140,6 +148,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539880236819
   useMarkdown: pweave
   fields:
@@ -199,15 +208,18 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539880267598
   fields:
-    Front: |
-      CCAC 00.D (Trigonometry) 06: If $\sin x = \frac{1}{3}$ and $\sec y = \frac{5}{4}$, where $x$ and $y$ lie between $0$ and $\pi/2$, evaluate $\sin(x + y)$.
+    Front: >
+      CCAC 00.D (Trigonometry) 06: If $\sin x = \frac{1}{3}$ and $\sec y = \frac{5}{4}$,
+      where $x$ and $y$ lie between $0$ and $\pi/2$, evaluate $\sin(x + y)$.
     Back: |
       $\frac{1}{15}(4 + 6\sqrt{2})$.
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539880267721
   tags:
   - ToDo
@@ -222,6 +234,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539880267839
   tags:
   - ToDo
@@ -236,6 +249,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539880267965
   fields:
     Front: |
@@ -245,6 +259,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
 - id: 1539880268089
   useMarkdown: pweave
   fields:
@@ -286,3 +301,4 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+    Annotations: ''
