--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -49,6 +49,7 @@ notes:
       $$
       2.7
       $$
+    Annotations: ''
 - id: 1543449293019
   useMarkdown: pweave
   fields:
@@ -88,6 +89,7 @@ notes:
       $$
       2.3, \ 5.6
       $$
+    Annotations: ''
 - id: 1543449296598
   useMarkdown: pweave
   fields:
@@ -127,6 +129,7 @@ notes:
       $$
       [-6,6]
       $$
+    Annotations: ''
 - id: 1543449300119
   useMarkdown: pweave
   fields:
@@ -166,6 +169,7 @@ notes:
       $$
       [-4,4]
       $$
+    Annotations: ''
 - id: 1543449303769
   useMarkdown: pweave
   fields:
@@ -205,6 +209,7 @@ notes:
       $$
       [-4,4]
       $$
+    Annotations: ''
 - id: 1543449307470
   useMarkdown: pweave
   fields:
@@ -242,6 +247,7 @@ notes:
       ```
     Back: |
       No; it fails the Horizontal Line Test.
+    Annotations: ''
 - id: 1543449311123
   useMarkdown: pweave
   fields:
@@ -279,6 +285,7 @@ notes:
       ```
     Back: |
       Odd; its graph is symmetric about the origin.
+    Annotations: ''
 - id: 1543450755145
   fields:
     Front: |
@@ -290,12 +297,14 @@ notes:
       $$
       2a + h - 2
       $$
+    Annotations: ''
 - id: 1543450755269
   fields:
     Front: |
       CCAC 01.Review 05: Find the domain and range of the function $f(x) = 2/(3x - 1)$. Write your answer in interval notation.
     Back: |
       $(-\infty, \frac{1}{3}) \cup (\frac{1}{3}, \infty), \ (-\infty, 0) \cup (0, \infty)$
+    Annotations: ''
 - id: 1543450755369
   fields:
     Front: |
@@ -304,42 +313,55 @@ notes:
       $$
       (-6, \infty), \ \mathbb{R}
       $$
+    Annotations: ''
 - id: 1543450755473
   fields:
-    Front: |
-      CCAC 01.Review 09a: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = f(x) + 8$ can be obtained from the graph of $f$.
+    Front: >
+      CCAC 01.Review 09a: Suppose that the graph of $f$ is given. Describe how the
+      graph of the function $y = f(x) + 8$ can be obtained from the graph of $f$.
     Back: |
       Shift the graph 8 units upward.
+    Annotations: ''
 - id: 1543450755570
   fields:
-    Front: |
-      CCAC 01.Review 09b: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = f(x + 8)$ can be obtained from the graph of $f$.
+    Front: >
+      CCAC 01.Review 09b: Suppose that the graph of $f$ is given. Describe how the
+      graph of the function $y = f(x + 8)$ can be obtained from the graph of $f$.
     Back: |
       Shift the graph 8 units to the left.
+    Annotations: ''
 - id: 1543450755671
   fields:
-    Front: |
-      CCAC 01.Review 09c: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = 1 + 2f(x)$ can be obtained from the graph of $f$.
+    Front: >
+      CCAC 01.Review 09c: Suppose that the graph of $f$ is given. Describe how the
+      graph of the function $y = 1 + 2f(x)$ can be obtained from the graph of $f$.
     Back: |
       Stretch the graph vertically by a factor of 2, then shift it 1 unit upward.
+    Annotations: ''
 - id: 1543450755769
   fields:
-    Front: |
-      CCAC 01.Review 09d: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = f(x - 2) - 2$ can be obtained from the graph of $f$.
+    Front: >
+      CCAC 01.Review 09d: Suppose that the graph of $f$ is given. Describe how the
+      graph of the function $y = f(x - 2) - 2$ can be obtained from the graph of $f$.
     Back: |
       Shift the graph 2 units to the right and 2 units downward.
+    Annotations: ''
 - id: 1543450755869
   fields:
-    Front: |
-      CCAC 01.Review 09e: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = -f(x)$ can be obtained from the graph of $f$.
+    Front: >
+      CCAC 01.Review 09e: Suppose that the graph of $f$ is given. Describe how the
+      graph of the function $y = -f(x)$ can be obtained from the graph of $f$.
     Back: |
       Reflect the graph about the $x$-axis.
+    Annotations: ''
 - id: 1543450755972
   fields:
-    Front: |
-      CCAC 01.Review 09f: Suppose that the graph of $f$ is given. Describe how the graph of the function $y = f^{-1}(x)$ can be obtained from the graph of $f$.
+    Front: >
+      CCAC 01.Review 09f: Suppose that the graph of $f$ is given. Describe how the
+      graph of the function $y = f^{-1}(x)$ can be obtained from the graph of $f$.
     Back: |
       Reflect the graph about the line $y = x$ (assuming $f$ is one-to-one).
+    Annotations: ''
 - id: 1543450756069
   useMarkdown: pweave
   fields:
@@ -382,6 +404,7 @@ notes:
       ax.text(2, 2, '$y = -\\sin{2x}$')
       p._backend.show()
       ```
+    Annotations: ''
 - id: 1543450756169
   useMarkdown: pweave
   fields:
@@ -425,6 +448,7 @@ notes:
       ax.text(0.5, 0.5 + 0.2, '$y = \\frac{1}{2}$')
       p._backend.show()
       ```
+    Annotations: ''
 - id: 1543450756273
   useMarkdown: pweave
   fields:
@@ -468,6 +492,7 @@ notes:
       ax.text(1, 1, '$$y = \\frac{1}{x+2}$$')
       p._backend.show()
       ```
+    Annotations: ''
 - id: 1543450756369
   fields:
     Front: |
@@ -477,6 +502,7 @@ notes:
       $$
     Back: |
       Neither.
+    Annotations: ''
 - id: 1543450756469
   fields:
     Front: |
@@ -486,6 +512,7 @@ notes:
       $$
     Back: |
       Odd.
+    Annotations: ''
 - id: 1543450756572
   fields:
     Front: |
@@ -495,6 +522,7 @@ notes:
       $$
     Back: |
       Even.
+    Annotations: ''
 - id: 1543450756669
   fields:
     Front: |
@@ -504,32 +532,38 @@ notes:
       $$
     Back: |
       Neither.
+    Annotations: ''
 - id: 1543450756773
   fields:
     Front: |
       CCAC 01.Review 19a: If $f(x) = \ln{x}$ and $g(x) = x^2 - 9$, find the function $f \circ g$ and its domain.
     Back: |
       $(f \circ g)(x) = \ln(x^2 - 9)$, $(-\infty, -3) \cup (3, \infty)$
+    Annotations: ''
 - id: 1543450756881
   fields:
     Front: |
       CCAC 01.Review 19b: If $f(x) = \ln{x}$ and $g(x) = x^2 - 9$, find the function $g \circ f$ and its domain.
     Back: |
       $(g \circ f)(x) = (\ln{x})^2 - 9$, $(0, \infty)$
+    Annotations: ''
 - id: 1543450756998
   fields:
     Front: |
       CCAC 01.Review 19c: If $f(x) = \ln{x}$, find the function $f \circ f$ and its domain.
     Back: |
       $(f \circ f)(x) = \ln{\ln{x}}$, $(1, \infty)$
+    Annotations: ''
 - id: 1543450757094
   fields:
     Front: |
       CCAC 01.Review 19d: If $g(x) = x^2 - 9$, find the function $g \circ g$ and its domain.
     Back: |
       $(g \circ g)(x) = (x^2 - 9)^2 - 9$, $(-\infty, \infty)$
+    Annotations: ''
 - id: 1543450757221
-  tags: [requiresCoding]
+  tags:
+  - requiresCoding
   useMarkdown: pweave
   fields:
     Front: |
@@ -600,24 +634,28 @@ notes:
       print('y = {}x + {}'.format(m, b))
       print('m*2010 + b = {}'.format(m*2010 + b))
       ```
+    Annotations: ''
 - id: 1543451770419
   fields:
     Front: |
       CCAC 01.Review 23: If $f(x) = 2x + \ln{x}$, find $f^{-1}(2)$.
     Back: |
       $1$.
+    Annotations: ''
 - id: 1543451770544
   fields:
     Front: |
       CCAC 01.Review 25a: Find the exact value of the expression $e^{2\ln{3}}$.
     Back: |
       $9$.
+    Annotations: ''
 - id: 1543451770671
   fields:
     Front: |
       CCAC 01.Review 25b: Find the exact value of the expression $\log_{10}{25} + \log_{10}{4}$.
     Back: |
       $2$.
+    Annotations: ''
 - id: 1543451770801
   fields:
     Front: |
@@ -631,12 +669,15 @@ notes:
       b. $m(t) = 2^{-t/4}$.
       c. $t(m) = -4 \log_2{m}$; the time elapsed when there are $m$ grams of $^{100}\text{Pd}$.
       d. About 26.6 days.
+    Annotations: ''
 - id: 1543451770920
-  tags: [requiresCoding]
+  tags:
+  - requiresCoding
   useMarkdown: pweave
   fields:
-    Front: |
-      CCAC 01.Review 29: Graph members of the family of functions $f(x) = \ln(x^2 - c)$ for several values of $c$. How does the graph change when $c$ changes?
+    Front: >
+      CCAC 01.Review 29: Graph members of the family of functions $f(x) = \ln(x^2
+      - c)$ for several values of $c$. How does the graph change when $c$ changes?
     Back: |
       For $c < 0$, $f$ is defined everywhere. As $c$ increases, the dip at $x = 0$ becomes deeper. For $c \ge 0$, the graph has asymptotes at $x = \pm\sqrt{c}$.
       ```{python }
@@ -669,8 +710,10 @@ notes:
           sp.line_color = colors[i]
         p.show()
       ```
+    Annotations: ''
 - id: 1543451771026
-  tags: [requiresCoding]
+  tags:
+  - requiresCoding
   useMarkdown: pweave
   fields:
     Front: |
@@ -709,8 +752,10 @@ notes:
       p._backend.show()
       ```
       b. $y = \sqrt{\ln{x}}$.
+    Annotations: ''
 - id: 1543451771120
-  tags: [requiresCoding]
+  tags:
+  - requiresCoding
   useMarkdown: pweave
   fields:
     Front: |
@@ -745,3 +790,4 @@ notes:
       ax.text(6, 1.6, '$f^{-1}$')
       p._backend.show()
       ```
+    Annotations: ''
