--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
@@ -20,6 +20,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862157
   fields:
     Front: |
@@ -31,6 +32,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862253
   fields:
     Front: |
@@ -42,6 +44,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862346
   fields:
     Front: >
@@ -54,6 +57,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862444
   fields:
     Front: |
@@ -65,6 +69,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862547
   fields:
     Front: |
@@ -74,6 +79,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862644
   fields:
     Front: >
@@ -86,6 +92,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862794
   fields:
     Front: >
@@ -97,6 +104,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521862926
   fields:
     Front: |
@@ -108,6 +116,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521863021
   fields:
     Front: |
@@ -119,6 +128,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521863120
   fields:
     Front: >
@@ -131,6 +141,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521863228
   fields:
     Front: >
@@ -143,6 +154,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521863369
   useMarkdown: pweave
   fields:
@@ -177,6 +189,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521866644
   useMarkdown: pweave
   fields:
@@ -219,6 +232,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521869448
   useMarkdown: pweave
   fields:
@@ -255,6 +269,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521872944
   useMarkdown: pweave
   fields:
@@ -291,6 +306,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521876244
   useMarkdown: pweave
   fields:
@@ -327,6 +343,7 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
 - id: 1543521879546
   useMarkdown: pweave
   fields:
@@ -361,3 +378,4 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+    Annotations: ''
