--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -44,7 +44,11 @@ notes:
       ## RoA mtl 6: State the Factor Theorem.
     Back: |
       If $P$ is a polynomial and $P(b)=0$, then $x-b$ is a factor of $P(x)$.
-    Annotations: ''
+    Annotations: The theorem may be badly stated; it should probably read:<div><br></div><div>For
+      any polynomial \(P(x)\), \(x-b\) is a factor of \(P(x)\) iff \(P(b)=0\) (i.e.,
+      \(b\) is a root of \(P(x)\)).</div>
+  tags:
+  - ann:fix-me
 - id: 1542149180257
   fields:
     Front: |
@@ -56,7 +60,9 @@ notes:
       $$
         ax^2 + bx + c = a \left(x + \frac{b}{2a}\right)^2 + \left(c - \frac{b^2}{4a}\right)
       $$
-    Annotations: ''
+    Annotations: 'Issue: Badly memorized. I tend to drop an \(a\) in the first denominator.'
+  tags:
+  - ann:trouble
 - id: 1542149180394
   fields:
     Front: |
@@ -257,7 +263,11 @@ notes:
       ## RoA mtl 9: Define _irreducible_.
     Back: |
       A polynomial with no real roots is said to be _irreducible_.
-    Annotations: ''
+    Annotations: 'Issue: I should say <i>having no real roots,</i>&nbsp;but often
+      instead say <i>having no <b>rational</b>&nbsp;roots,</i>&nbsp;mixing up <i>real</i>&nbsp;and
+      <i>rational</i>. I mean the correct things, but say the wrong thing.'
+  tags:
+  - ann:trouble
 - id: 1542149181469
   fields:
     Front: |
@@ -265,7 +275,7 @@ notes:
     Back: |
       The solutions of the quadratic equation $ax^2 + bx + c = 0$ can be expressed as
       $$
-        x = -\frac{2c}{b \pm \sqrt{b^2 - 4ac}}.
+        x = -\frac{2c}{b \mp \sqrt{b^2 - 4ac}}.
       $$
     Annotations: ''
 - id: 1542149181594
@@ -274,7 +284,7 @@ notes:
       ## RoA mtl 7.7: Prove the version of the Quadratic Formula based on Vieta's Formulae.
       The solutions of the quadratic equation $ax^2 + bx + c = 0$ can be expressed as
       $$
-        x = -\frac{2c}{b \pm \sqrt{b^2 - 4ac}}.
+        x = -\frac{2c}{b \mp \sqrt{b^2 - 4ac}}.
       $$
     Back: |
       Start with the standard Quadratic Formula, choosing either root of $ax^2 + bx + c$ without loss of generality:
@@ -382,7 +392,11 @@ notes:
       $$
         -x^2 + 6x + 3
       $$
-    Annotations: ''
+    Annotations: 'Issue: I tend to not perform all multiplications in \(4(x^2-x+2)\);
+      the correct result is \(4x^2 - 4x + 8\), but I often leave the trailing constant
+      as 2 instead of 8.'
+  tags:
+  - ann:trouble
 - id: 1542149182575
   fields:
     Front: |
@@ -478,7 +492,11 @@ notes:
       $$
         2x^3 - 5x^2 - x + 1
       $$
-    Annotations: ''
+    Annotations: 'Issue: I should write \(-3x+2x=-x\), but for some reason have repeatedly
+      written \(-2x\) on the right hand side. Usually when I''m tired.<div><br></div><div>Best
+      solution, short of not doing math when tired, is to double check my work.</div>'
+  tags:
+  - ann:trouble
 - id: 1542149183395
   fields:
     Front: |
@@ -724,7 +742,11 @@ notes:
       $$
         9(x - 2)(x + 2)
       $$
-    Annotations: ''
+    Annotations: 'Issue: I could factor out \(9\) here, although this requirement
+      may be inconsistent in this text. The rule seems to be "factor out constants
+      unless doing so introduces noninteger factors".'
+  tags:
+  - ann:trouble
 - id: 1542149185470
   fields:
     Front: |
@@ -748,7 +770,9 @@ notes:
       $$
         (3x + 2)(2x - 3)
       $$
-    Annotations: ''
+    Annotations: 'Issue: \(\frac{18}{12}=\frac{3}{2}\), not 3.'
+  tags:
+  - ann:trouble
 - id: 1542149185670
   fields:
     Front: |
@@ -1012,7 +1036,11 @@ notes:
       $$
         (2x + 1)^2 - 3
       $$
-    Annotations: ''
+    Annotations: 'Issue: I should write \((2x+1)^2 - 3\), but often leave it as \(4(x+\frac{1}{2})^2
+      - 3\), forgetting to remove the internal fraction.<div><br></div><div>I don''t
+      think this is a big deal, but it would be better to follow the simplified convention.</div>'
+  tags:
+  - ann:trouble
 - id: 1542149187895
   fields:
     Front: |
@@ -1048,7 +1076,10 @@ notes:
       $$
         -2, 4
       $$
-    Annotations: ''
+    Annotations: 'Issue: Need to pay better attention to instructions; I should <i>solve,</i>&nbsp;not&nbsp;<i>factor</i><i>;</i>&nbsp;e.g.,
+      I should answer \(4, -2\) instead of \((x-4)(x+2)\).'
+  tags:
+  - ann:trouble
 - id: 1542149188193
   fields:
     Front: |
@@ -1084,7 +1115,10 @@ notes:
       $$
         \frac{-5 \pm\sqrt{13}}{6}
       $$
-    Annotations: ''
+    Annotations: 'Note: completing the square is probably a quicker way to factor,
+      whereas the quadratic formula is a quicker way to solve.'
+  tags:
+  - ann:thoughts
 - id: 1542149188495
   fields:
     Front: |
@@ -1150,7 +1184,14 @@ notes:
       $$
     Back: |
       Not irreducible (two real roots)
-    Annotations: ''
+    Annotations: '<div>Issue: when \(4ac\) is positive, the quadratic is reducible.
+      I sometimes mix up this rule.</div><div><br></div>Thoughts: There’s a trick
+      here for quickly analyzing the discriminant: if \(ac\)&nbsp;is negative then
+      the discriminant is positive, so the quadratic is reducible.'
+  tags:
+  - ann:discriminant
+  - ann:thoughts
+  - ann:trouble
 - id: 1542149189121
   fields:
     Front: |
@@ -1208,7 +1249,11 @@ notes:
       $$
         243 + 405x^2 + 270x^4 + 90x^6 + 15x^8 + x^{10}
       $$
-    Annotations: ''
+    Annotations: 'TODO: memorize binomial coefficients for \(0 \le n,k \le 20\)<div><br></div><div>Would
+      probably be worthwhile to practice reverse-engineering the question from the
+      answer.</div>'
+  tags:
+  - ann:to-do
 - id: 1542149189644
   fields:
     Front: |
@@ -1236,7 +1281,9 @@ notes:
       $$
         -\frac{1}{3}
       $$
-    Annotations: ''
+    Annotations: 'Issue: must copy the negative sign, often forget.'
+  tags:
+  - ann:trouble
 - id: 1542149189864
   fields:
     Front: |
@@ -1252,7 +1299,13 @@ notes:
       $$
         2|x|
       $$
-    Annotations: ''
+    Annotations: <div>Why \(2|x|\) (as opposed to \(2x\) or \(|2x|\)?</div><div><br></div>\(\sqrt{2^2}\)
+      is simply \(2\), as is \(\sqrt{(-2)}^2\).<div><br></div><div>But we don’t know
+      the sign of \(x\). If \(x&lt;0\) then \(\sqrt{x^2} = -x\), whereas if \(0 \le
+      x\)&nbsp;then \(\sqrt{x^2} = x\). Similarly for \(\sqrt[n]{x^n}\).</div><div><br></div><div>This
+      is why \(\sqrt{2^2 x^2} = 2|x|\).</div>
+  tags:
+  - ann:even-nth-roots-and-absolute-values
 - id: 1542149189975
   fields:
     Front: |
@@ -1276,7 +1329,13 @@ notes:
       $$
         4a^2b\sqrt{b}
       $$
-    Annotations: ''
+    Annotations: 'The question here would be: why is \(\sqrt{b^3}\) equal to \(b\sqrt{b}\)&nbsp;instead
+      of \(|b|\sqrt{b}\)?<div><br></div><div>Because \(|b|=b\)&nbsp;implicitly, both
+      are true, but the latter is superfluous. This is because if \(b &lt; 0\)&nbsp;then
+      \(\sqrt{b^3}\)&nbsp;is undefined (if we restrict to \(\mathbb{R}\)), so \(b\)&nbsp;must
+      be nonnegative.<br></div>'
+  tags:
+  - ann:even-nth-roots-and-absolute-values
 - id: 1542149190169
   fields:
     Front: |
@@ -1316,7 +1375,9 @@ notes:
       $$
         2^{60}
       $$
-    Annotations: ''
+    Annotations: '&nbsp;Problems:<div>- I tend to add incorrectly on this card; e.g.,
+      \(2^{16} \times 4^{10} \times 16^{6} = 2^{16+20+24} = 2^{60}\), but I keep getting
+      \(2^{50}\).</div>'
 - id: 1542149190494
   fields:
     Front: |
@@ -1388,7 +1449,9 @@ notes:
       $$
         2\sqrt[5]{3}
       $$
-    Annotations: ''
+    Annotations: Issues:<div>- In this problem, I tend to confuse \(2^5\) and \(3^5\).</div>
+  tags:
+  - ann:trouble
 - id: 1542149191093
   fields:
     Front: |
@@ -1424,7 +1487,13 @@ notes:
       $$
         2\sqrt{2}|x|^3y^6
       $$
-    Annotations: ''
+    Annotations: Issues:<div>- The order of operations is important here. \(x^2\)
+      discards the sign of \(x\), hence \((x^2)^{3/2} = |x|^3\), whereas I tend to
+      equate \((x^2)^{3/2} = x^{\frac{2\times 3}{2}} = x^3\). &nbsp;The order of operations
+      therefore has higher precedence than rules of simplification. I tend to forget
+      this fact.</div>
+  tags:
+  - ann:trouble
 - id: 1542149191410
   fields:
     Front: |
@@ -1448,7 +1517,12 @@ notes:
       $$
         y^{6/5}
       $$
-    Annotations: ''
+    Annotations: '<div>Issue/question: this is tricky. The domain of \(\sqrt[5]{x}\)
+      is all real numbers, but the sixth power drops the sign. So, I believe, \(y^{6/5}=|y|^{6/5}\),
+      and therefore the absolute value operation is superfluous and by convention
+      is removed.</div>'
+  tags:
+  - ann:questions
 - id: 1542149191594
   fields:
     Front: |
@@ -1512,7 +1586,9 @@ notes:
       $$
         r^{n/2}
       $$
-    Annotations: ''
+    Annotations: 'Issue: I should have added the exponents; instead I multiplied.'
+  tags:
+  - ann:trouble
 - id: 1542149192097
   fields:
     Front: |
@@ -1525,7 +1601,11 @@ notes:
       $$
         \frac{1}{\sqrt{x} + 3}
       $$
-    Annotations: ''
+    Annotations: 'Issue: I had trouble with the meaning of "rationalize the expression",
+      which I resolved to mean "rationalize the part that isn''t rational (even if
+      the rational part becomes irrational)".'
+  tags:
+  - ann:trouble
 - id: 1542149192202
   fields:
     Front: |
@@ -1538,7 +1618,12 @@ notes:
       $$
         \frac{-1}{\sqrt{x} + x}
       $$
-    Annotations: ''
+    Annotations: 'Possible issue: I tend to leave to denominator in the unsimplified
+      form \(\sqrt{x}(1+\sqrt{x})\) instead of \(\sqrt{x}+x\). Both answers are equivalent,
+      so this is perhaps a matter of convention, and therefore I’ll consider my answer
+      incorrect. But it’s a minor point.'
+  tags:
+  - ann:trouble
 - id: 1542149192309
   fields:
     Front: |
@@ -1551,7 +1636,11 @@ notes:
       $$
         \frac{x^2 + 4x + 16}{x\sqrt{x} + 8}
       $$
-    Annotations: ''
+    Annotations: 'Issue: I forgot how to factor \(a^3 - b^3\); I should have written<div>\[
+      x^3 - 4^3 = (x - 4)(x^2 + 4x + 16), \]</div><div>but instead dropped an exponent
+      and wrote</div><div><div>\[ x^3 - 4^3 = (x - 4)(x + 4x + 16). \]</div></div>'
+  tags:
+  - ann:trouble
 - id: 1542149192424
   fields:
     Front: |
